--- a/css/styles.css
+++ b/css/styles.css
@@ -14,5 +14,5 @@ body {
     margin: 0 auto;
     text-align: center;
     font-size: 2em;
-    font-family: 'Montserrat Alternates', sans-serif;
+/*    font-family: 'Montserrat Alternates', sans-serif;*/
 }
